--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@syncfusion/ej2-dropdowns": "^18.1.52",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
